--- a/src/styles/app.less
+++ b/src/styles/app.less
@@ -4,6 +4,8 @@
 
 @import '~ant-design-vue/lib/style/components.less';
 
+@import './override.less';
+
 body {
   font-family: @font-family;
   font-size: @font-size__12;
