--- a/src/components/MultiTab/index.less
+++ b/src/components/MultiTab/index.less
@@ -1,17 +1,29 @@
-@import '../../styles/variables.less';
+@import '../../styles/all-vars.less';
 
 @multi-tab-prefix-cls: ~"@{ant-pro-prefix}-multi-tab";
 @multi-tab-wrapper-prefix-cls: ~"@{ant-pro-prefix}-multi-tab-wrapper";
 
-/*
-.topmenu .@{multi-tab-prefix-cls} {
-  max-width: 1200px;
-  margin: -23px auto 24px auto;
-}
-*/
+@multi-tab-bg-color: #dadada;
+@multi-active-tab-bg-color: #f8f8f8;
+
 .@{multi-tab-prefix-cls} {
-  margin: -23px -24px 24px -24px;
-  background: #fff;
+  position: fixed;
+  top: 54px;
+  margin: 0;
+  z-index: 1;
+  background: @multi-tab-bg-color;
+
+  .ant-tabs.ant-tabs-card .ant-tabs-card-bar .ant-tabs-tab {
+    color: inherit;
+    border: 0;
+    border-radius: 0;
+    background: @multi-tab-bg-color;
+  }
+
+  .ant-tabs.ant-tabs-card .ant-tabs-card-bar .ant-tabs-tab-active {
+    color: @color__gray-110;
+    background: @multi-active-tab-bg-color;
+  }
 }
 
 .topmenu .@{multi-tab-wrapper-prefix-cls} {
