--- a/src/styles/app.less
+++ b/src/styles/app.less
@@ -1,17 +1,5 @@
-@import '~ant-design-vue/lib/style/index.less';
-@import './tokens/index.less';
-@import './variables.less';
-
-@import '~ant-design-vue/lib/style/components.less';
-
-@import './override.less';
-
-body {
-  font-family: @font-family;
-  font-size: @font-size__12;
-  color: @color__gray-100;
-  background: @color__white;
-}
+@import './all-vars.less';
+@import './all-styles.less';
 
 #app {
   width: 100%;
