Modify lots of components styles.

--- a/src/styles/variables/index.less
+++ b/src/styles/variables/index.less
@@ -1,4 +1,5 @@
 @import './global.less';
+@import './ant-form.less';
 @import './ant-tabs.less';
 @import './ant-menu.less';
 @import './ant-badge.less';
