--- a/src/styles/components/index.less
+++ b/src/styles/components/index.less
@@ -1,4 +1,5 @@
 @import './ant-tabs.less';
+@import './ant-form.less';
 @import './ant-menu.less';
 @import './ant-badge.less';
 @import './ant-table.less';
