--- a/src/styles/core/override.less
+++ b/src/styles/core/override.less
@@ -13,30 +13,6 @@
   }
 }
 
-.ant-form-inline {
-  .ant-form-item {
-    display: flex;
-    margin-bottom: 24px;
-    margin-right: 0;
-
-    .ant-form-item-control-wrapper {
-      flex: 1 1;
-      display: inline-block;
-      vertical-align: middle;
-    }
-
-    > .ant-form-item-label {
-      line-height: 32px;
-      padding-right: 8px;
-      width: auto;
-    }
-    .ant-form-item-control {
-      height: 32px;
-      line-height: 32px;
-    }
-  }
-}
-
 .table-operator {
   margin-bottom: 18px;
 
@@ -44,3 +20,8 @@
     margin-right: 8px;
   }
 }
+
+// .ant-menu-item,
+// .ant-menu-submenu-title {
+//   user-select: none;
+// }
