--- a/packages/ecp-app/src/styles/components/index.less
+++ b/packages/ecp-app/src/styles/components/index.less
@@ -3,4 +3,5 @@
 @import './ant-menu.less';
 @import './ant-badge.less';
 @import './ant-table.less';
+@import './ant-checkbox.less';
 @import './ant-layout-sider.less';
